<resources>
    <string name="app_name">DietiEstates25</string>
    <string name="annulla_text">&#60; Indietro</string>
    <string name="home_text">&#60; Torna alla Home</string>
    <string name="stringa_vuota"> </string>
    <string name="content_description_logo">DELogo</string>
    <string name="content_description_google_login">Google login button</string>
    <string name="content_description_github_login">GitHub login button</string>
    <string name="welcome_text">Benvenuto</string>
    <string name="email_text">E-mail</string>
    <string name="password_text">Password</string>
    <string name="login_button_text">Accedi</string>
    <string name="no_account_text">Non hai ancora un account?</string>
    <string name="register_text">Registrati</string>
    <string name="login_with_text">Registrati con:</string>
    <string name="cerca_tab_text">Cerca</string>
    <string name="profilo_tab_text">Profilo</string>
    <string name="crea_tab_text">Crea</string>
    <string name="prenotazioni_tab_text">Visite</string>
    <string name="calendario_tab_text">Calendario</string>
    <string name="password_tab_text">Password</string>
    <string name="notifiche_tab_text">Notifiche</string>
    <string name="profilo">PROFILO</string>
    <string name="profilo_text">Ciao, %1$s!</string>
    <string name="logout_button">Logout</string>
    <string name="ricerca_home_title">Cerca un immobile</string>
    <string name="ricerca_home_subtitle1">Visualizza gli annunci e trova quello</string>
    <string name="ricerca_home_subtitle2">più adatto a te!</string>
    <string name="ricerca_home_options">Scegli come effettuare la ricerca:</string>
    <string name="ricerca_home_città">Seleziona una città</string>
    <string name="ricerca_home_città_btn">Città</string>
    <string name="ricerca_home_mappa">Seleziona un punto sulla mappa</string>
    <string name="ricerca_home_mappa_btn">Mappa</string>
    <string name="oppure">Oppure</string>
    <string name="apply_filters_title">Applica filtri:</string>
    <string name="property_type_label">Tipo di Immobile:</string>
    <string name="min_price_label">Prezzo Minimo:</string>
    <string name="max_price_label">Prezzo Massimo:</string>
    <string name="floor_label">Piano:</string>
    <string name="min_rooms_label">Numero di stanze minimo:</string>
    <string name="energy_class_label">Classe Energetica:</string>
    <string name="services_label">Servizi:</string>
    <string name="map_button_text">Mappa</string>
    <string name="apply_filters_button_text">Applica filtri e cerca</string>
    <string name="default_min_price_hint">Prezzo minimo</string>
    <string name="default_max_price_hint">Prezzo massimo</string>
    <string name="default_rooms_text">3 stanze</string>
    <string name="concierge_checkbox">Portineria</string>
    <string name="terrace_checkbox">Terrazzo</string>
    <string name="elevator_checkbox">Ascensore</string>
    <string name="climatization_checkbox">Climatizzazione</string>
    <string name="garage_checkbox">Box Auto</string>
    <string name="garden_checkbox">Giardino</string>
    <string name="tipo_annuncio">In %1$s</string>
    <string name="classe_energetica">Classe energetica: \ </string>
    <string name="piano">Piano: \ </string>
    <string name="save_position_button">Salva Posizione</string>
    <string name="search_position_button">Cerca per posizione</string>
    <string name="add_filters_button">Aggiungi filtri</string>
    <string name="mappa_info">Seleziona un punto sulla mappa e cerca annunci nelle vicinanze</string>
    <string name="search_title">Ricerca Immobili</string>
    <string name="position_label">Posizione</string>
    <string name="choose_position_hint">Scegli posizione sulla mappa:</string>
    <string name="search_button_text">Cerca</string>
    <string name="latitude_text">Latitudine: %1$.6f</string>
    <string name="longitude_text">Longitudine: %1$.6f</string>
    <string name="address_text">Indirizzo: %1$s</string>
    <string name="signup_info_text">Compila il modulo per creare un nuovo account.</string>
    <string name="name_label">Nome</string>
    <string name="name_hint">Inserisci il tuo nome</string>
    <string name="surname_label">Cognome</string>
    <string name="surname_hint">Inserisci il tuo cognome</string>
    <string name="email_label">E-mail</string>
    <string name="email_hint">Inserisci la tua e-mail</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Inserisci una password</string>
    <string name="errors_email_label">Errori email:</string>
    <string name="errors_password_label">Errori password:</string>
    <string name="signup_button_text">Crea account</string>
    <string name="already_account_text">Hai già un account?</string>
    <string name="login_text">Accedi </string>
    <string name="status_text">Attendere…</string>
    <string name="result_text">Il risultato dell\'operazione verrà mostrato a breve.</string>
    <string name="return_login_button_text">Torna a Accedi</string>
    <string name="ok_signup">OK!</string>
    <string name="ops_signup">Ops!</string>
    <string name="ok_messaggio_signup">Profilo creato correttamente.</string>
    <string name="no_image">no_image.png</string>
    <string name="titolo_annuncio">Titolo:</string>
    <string name="dimensioni_annuncio">Dimensioni: \ </string>
    <string name="dimensioni_annuncio_m2"> %1$s m²</string>
    <string name="prezzo_annuncio">Prezzo: \ </string>
    <string name="prezzo_annuncio_euro">%1$s €</string>
    <string name="indirizzo_annuncio">Indirizzo:</string>
    <string name="metri_quadrati">\ m²</string>
    <string name="descrizione_annuncio">Descrizione:</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="numero_stanze">Numero di stanze: \ </string>
    <string name="more_info">Per maggiori informazioni contattare: %1$s .</string>
    <string name="prenota_btn">Prenota una visita</string>
    <string name="text_view_title_gestore_utente">Aggiungi un collaboratore</string>
    <string name="text_view_subtitle_gestore_utente">Sei il gestore o un amministratore di un\'agenzia immobiliare? Registra qui un nuovo profilo per i tuoi collaboratori!</string>
    <string name="add_utente_tipo_utente">Nuovo Agente o Amministratore:</string>
    <string name="label_password_gestore_utente">
        La password sarà autogenerata dai nostri server e potrà essere cambiata anche in seguito.
    </string>
    <string name="btn_add_gestore_utente">Aggiungi</string>
    <string-array name="tipo_utente">
        <item>Agente</item>
        <item>Amministratore</item>
    </string-array>
    <string name="text_view_title_gestore_admin">Cambia password di amministrazione</string>
    <string name="text_view_subtitle_gestore_admin">Modifica la password di amministrazione per proteggere i dati della tua agenzia.</string>
    <string name="label_old_password_gestore_admin">Vecchia password</string>
    <string name="hint_old_password_gestore_admin">Inserisci la vecchia password</string>
    <string name="label_confirm_new_password_gestore_admin">Conferma nuova password</string>
    <string name="hint_confirm_new_password_gestore_admin">Reinserisci la nuova password</string>
    <string name="label_new_password_gestore_admin">Nuova password</string>
    <string name="hint_new_password_gestore_admin">Inserisci la nuova password</string>
    <string name="change_pwd_gestore">Cambia</string>
    <string name="riepilogo_annuncio">Stai inserendo una prenotazione per:</string>
    <string name="seleziona_data">Seleziona una data (entro 2 settimane):</string>
    <string name="data">Data</string>
    <string name="data_selezionata">%1$d/%2$d/%3$d</string>
    <string name="ora_selezionata">%1$d:%2$02d</string>
    <string name="seleziona_ora">Seleziona un orario (la visita ha durata di 1h):</string>
    <string name="ora">Orario</string>
    <string name="prenota">Prenota</string>
    <string name="temperatura">Temperatura (°C): %.1f </string>
    <string name="umidita">Umidità (%%): %.1f </string>
    <string name="precipitazioni">Precipitazioni (%%): %.1f </string>
    <string name="pioggia">Pioggia (mm): %.1f </string>
    <string name="no_info_meteo">Impossibile recuperare info.</string>
    <string name="nuovo_annuncio_title">Inserisci un annuncio</string>
    <string name="nuova_immagine_title">Inserisci un\'immagine</string>
    <string name="indirizzo_mappa">Indirizzo (manualmente o tramite mappa):</string>
    <string name="indirizzo_non_valido">Indirizzo non valido. Riprovare.</string>
    <string name="avanti_button">Avanti</string>
    <string name="immagine_dal_dispositivo">Carica un\'immagine dal dispositivo</string>
    <string name="aggiungi_dettagli">Aggiungi dettagli</string>
    <string name="aggiungi_immagine">+</string>
    <string name="riepilogo">Riepilogo</string>
    <string name="riepilogo_crea_annuncio">Stai inserendo l\'annuncio:</string>
    <string name="prezzo_riepilogo"> %1$s € </string>
    <string name="dimensioni_riepilogo"> %1$s m²</string>
    <string name="annulla_button">Annulla</string>
    <string name="seleziona_button">Seleziona</string>
    <string name="fine_crea_annuncio">Fine</string>
    <string name="notifiche_titolo">Notifiche</string>
    <string name="notifiche_info">Gestisci le prenotazioni per i tuoi annunci</string>
    <string name="notifica_tag">Hai una richiesta di prenotazione per:</string>
    <string name="titolo_tag">" <u>%1$s</u> "</string>
    <string name="utente_tag">Dall\'utente <u>%1$s</u>,</string>
    <string name="giorno_tag">Per il giorno <u>%1$s</u>,</string>
    <string name="inizio_fine_tag">Dalle <u>%1$s</u> alle <u>%2$s</u>.</string>
    <string name="accetta_notifica">Accetta</string>
    <string name="accettata_notifica">Accettata</string>
    <string name="rifiuta_notifica">Rifiuta</string>
    <string name="rifiutata_notifica">Rifiutata</string>
    <string name="nessuna_prenotazione">Nessun appuntamento presente per il giorno selezionato.</string>
    <string name="appuntamento_per">Appuntamento per:</string>
    <string name="visualizza_appuntamenti">Visualizza appuntamenti</string>
    <string name="visualizza_prenotazioni">Visualizza prenotazioni</string>
    <string name="visualizza_prenotazioni_info">Controlla lo stato delle prenotazioni effettuate</string>
    <string name="non_valutata_prenotazione">Non ancora valutata</string>
</resources>