<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_ricerca_filtri"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.search.RicercaFiltriFragment"
    android:background="@color/background_color_light">

    <ScrollView
        android:layout_width="357dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="357dp"
            android:layout_height="729dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/annullaTextView"
                style="@style/AnnullaTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/annulla_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ProfiloTitleTextView"
                android:text="@string/apply_filters_title"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ProfiloSubtitleTextView"
                android:text="@string/property_type_label" />

            <Spinner
                android:id="@+id/spinner_tipo_annuncio"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:entries="@array/tipo_annuncio" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ProfiloSubtitleTextView"
                android:text="@string/min_price_label"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/text_prezzo_min"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:hint="@string/default_min_price_hint"
                android:layout_marginBottom="8dp"
                android:inputType="number"
                android:autofillHints="0"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ProfiloSubtitleTextView"
                android:text="@string/max_price_label" />

            <EditText
                android:id="@+id/text_prezzo_max"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:hint="@string/default_max_price_hint"
                android:layout_marginBottom="20dp"
                android:inputType="number"
                android:autofillHints="1.000.000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ProfiloSubtitleTextView"
                android:text="@string/floor_label" />

            <Spinner
                android:id="@+id/spinner_piano"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:entries="@array/piano"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ProfiloSubtitleTextView"
                android:text="@string/min_rooms_label"
                android:layout_marginBottom="8dp" />

            <SeekBar
                android:id="@+id/seekBar_stanze"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="20"
                android:progress="3" />

            <TextView
                android:id="@+id/text_stanze"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ProfiloSubtitleTextView"
                android:layout_gravity="center"
                android:text="@string/default_rooms_text"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ProfiloSubtitleTextView"
                android:text="@string/energy_class_label" />

            <Spinner
                android:id="@+id/spinner_classe_ene"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:entries="@array/classe_energetica"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ProfiloSubtitleTextView"
                android:text="@string/services_label" />

            <CheckBox
                android:id="@+id/checkBox_portineria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ProfiloSubtitleTextView"
                android:text="@string/concierge_checkbox" />

            <CheckBox
                android:id="@+id/checkBox_terrazzo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ProfiloSubtitleTextView"
                android:text="@string/terrace_checkbox" />

            <CheckBox
                android:id="@+id/checkBox_ascensore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ProfiloSubtitleTextView"
                android:text="@string/elevator_checkbox" />

            <CheckBox
                android:id="@+id/checkBox_climatizzazione"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ProfiloSubtitleTextView"
                android:text="@string/climatization_checkbox" />

            <CheckBox
                android:id="@+id/checkBox_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ProfiloSubtitleTextView"
                android:text="@string/garage_checkbox" />

            <CheckBox
                android:id="@+id/checkBox_giardino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ProfiloSubtitleTextView"
                android:text="@string/garden_checkbox" />

            <Button
                android:id="@+id/btn_applica_filtri"
                style="@style/BlueButton"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/apply_filters_button_text"
                android:layout_marginTop="16dp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>