<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.auth.SignUpActivity"
    android:background="@color/background_color_dark">

    <ScrollView
        android:layout_width="357dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <LinearLayout
        android:layout_width="357dp"
        android:layout_height="729dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/dietiestates25" />

        <TextView
            android:id="@+id/textBenvenuto"
            style="@style/LoginTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text" />

        <TextView
            android:id="@+id/textInfo"
            style="@style/LoginTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/signup_info_text" />

        <TextView
            android:id="@+id/textNome"
            style="@style/LoginTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/name_label" />

        <EditText
            android:id="@+id/editTextNome"
            style="@style/LoginEditText"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginBottom="16dp"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:hint="@string/name_label"/>

        <TextView
            android:id="@+id/textView02"
            style="@style/LoginTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/surname_label" />

        <EditText
            android:id="@+id/editTextCognome"
            style="@style/LoginEditText"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginBottom="16dp"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:hint="@string/surname_label"/>

        <TextView
            android:id="@+id/textView"
            style="@style/LoginTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/email_label" />

        <EditText
            android:id="@+id/editTextEmail"
            style="@style/LoginEditText"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:hint="@string/email_label"/>

        <TextView
            android:id="@+id/textView2"
            style="@style/LoginTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/password_label" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:hintEnabled="false"
            app:endIconMode="password_toggle">

            <EditText
                android:id="@+id/editTextPassword"
                style="@style/LoginEditText"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:importantForAutofill="no"
                android:hint="@string/password_text"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/erroriEmailTextView"
            style="@style/LoginTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/errors_email_label" />

        <TextView
            android:id="@+id/erroriPwdTextView"
            style="@style/LoginTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/errors_password_label" />


        <Button
            android:id="@+id/signUpButton"
            style="@style/LoginButton"
            android:layout_marginTop="16dp"
            android:layout_width="320dp"
            android:layout_height="54dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:text="@string/signup_button_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="60dp">

            <TextView
                android:id="@+id/textView6"
                style="@style/ForgotPasswordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_weight="1"
                android:text="@string/already_account_text" />

            <TextView
                android:id="@+id/loginText"
                style="@style/ForgotPasswordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_weight="1"
                android:text="@string/login_text"
                android:clickable="true"
                android:textStyle="bold"/>
        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>


